Added descriptions to API swagger, fixed parameters definitions, added /comments/{commentID} endpoint. Added searchUser API. Fixed database file system structure. Improved docker volume structure
